--- a/_Rmd/2022-07-10-ST558-2nd-project.Rmd
+++ b/_Rmd/2022-07-10-ST558-2nd-project.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Some Thoughts Aboout ST558 Project 1"
+title: "ST558 Project 2 - Feedbacks"
 author: "Chien-Lan Hsueh"
 date: "`r Sys.Date()`"
 ---
